--- a/Efteling Demo/index.html
+++ b/Efteling Demo/index.html
@@ -11,6 +11,9 @@
 	<!-- Pages -->
 	<div class='page' name='MasterPage'>
 		<div class='header' name='MasterPage'>
+            <a href='#Home' id='efteling-btn'>
+				<img src='img/app/logoEft_Home_bttn.png' />
+			</a>
 		</div>
 		<!-- First page content -->
 	</div>
