--- a/Efteling Demo/index.html
+++ b/Efteling Demo/index.html
@@ -10,7 +10,7 @@
 
 	<!-- Pages -->
 	<div class='page' name='MasterPage'>
-		<div class='header' name='MasterPage'>
+		<div id='mainHeader'>
             <a href='#Home' id='efteling-btn'>
 				<img src='img/app/logoEft_Home_bttn.png' />
 			</a>
