--- a/Efteling Demo/index.html
+++ b/Efteling Demo/index.html
@@ -19,8 +19,8 @@
 		<!-- First page content -->
 	</div>
 	
-	<!-- JS includes
-	<script src="phonegap.js"></script> -->
+	<!-- JS includes -->
+	<script type="text/javascript" src="cordova.js"></script>
 	<script src="lib/mustache.js"></script>
 	<script src="lib/jquery-1.7.2.min.js"></script>
 	<script src="lib/jquery.mustache.js"></script>
