--- a/Efteling Demo/index.html
+++ b/Efteling Demo/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html>
 <head>
-	<meta charset="utf-8"/>
-	<!--<meta name="viewport" content="width=device-width, initial-scale=1"/>-->
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1" />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta name="format-detection" content="telephone=no" />
+	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 	<link rel="stylesheet" media="all" href="css/sem.css"/>
-	<!-- Adding "maximum-scale=1" fixes the Mobile Safari auto-zoom bug: http://filamentgroup.com/examples/iosScaleBug/ -->
 </head>
 <body lang="en">
 
@@ -21,9 +20,9 @@
 	
 	<!-- JS includes -->
 	<script type="text/javascript" src="cordova.js"></script>
-	<script src="lib/mustache.js"></script>
-	<script src="lib/jquery-1.7.2.min.js"></script>
-	<script src="lib/jquery.mustache.js"></script>
-	<script src="lib/sem/sem.js"></script>
+	<script type="text/javascript" src="lib/mustache.js"></script>
+	<script type="text/javascript" src="lib/jquery-1.7.2.min.js"></script>
+	<script type="text/javascript" src="lib/jquery.mustache.js"></script>
+	<script type="text/javascript" src="lib/sem/sem.js"></script>
 </body>
 </html>
