Swipe up + down implemented

--- a/Efteling Demo/index.html
+++ b/Efteling Demo/index.html
@@ -23,6 +23,7 @@
 	<script type="text/javascript" src="lib/mustache.js"></script>
 	<script type="text/javascript" src="lib/jquery-1.7.2.min.js"></script>
 	<script type="text/javascript" src="lib/jquery.mustache.js"></script>
+	<script type="text/javascript" src="lib/jquery.hammer.js"></script>
 	<script type="text/javascript" src="lib/sem/sem.js"></script>
 </body>
 </html>
