--- a/Efteling Demo/index.html
+++ b/Efteling Demo/index.html
@@ -27,9 +27,7 @@
 			'eventName': 'Efteling - Demo', 
 			'controllers': [
 				{'name': 'HomeController'},
-				{'name': 'MeController'},
-				{'name': 'ParkController'},
-				{'name': 'PoiController'}
+				{'name': 'ParkController'}
 			],
 			'models': [
 				{'name': 'PoiModel'}
