album class updated

--- a/Efteling Demo/index.html
+++ b/Efteling Demo/index.html
@@ -27,7 +27,8 @@
 			'eventName': 'Efteling - Demo', 
 			'controllers': [
 				{'name': 'HomeController'},
-				{'name': 'ParkController'}
+                {'name': 'ParkController'},
+                {'name': 'MeController'}
 			],
 			'models': [
 				{'name': 'PoiModel'}
