--- a/Efteling Demo/index.html
+++ b/Efteling Demo/index.html
@@ -10,6 +10,7 @@
 
 	<!-- Pages -->
 	<div class='page' name='MasterPage'>
+		<!-- Global page content -->
 		<div id='mainHeader'>
             <a href='#Home' id='efteling-btn'>
 				<img src='img/app/logoEft_Home_bttn.png' />
@@ -27,8 +28,9 @@
 			'eventName': 'Efteling - Demo', 
 			'controllers': [
 				{'name': 'HomeController'},
-                {'name': 'ParkController'},
-                {'name': 'MeController'}
+				{'name': 'ParkController'},
+				{'name': 'MeController'},
+				{'name': 'PoiController'}
 			],
 			'models': [
 				{'name': 'PoiModel'}
